--- a/notebooks/Ch03-1-Functions-Built-in.ipynb
+++ b/notebooks/Ch03-1-Functions-Built-in.ipynb
@@ -128,9 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### globals() and locals()\n",
     "- globals() returns a dictionary representing the current global symbol table\n",
@@ -482,6 +480,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 to the power 3 =  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('2 to the power 3 = ', 2**3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -604,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
