--- a/notebooks/Ch03-1-Functions-Built-in.ipynb
+++ b/notebooks/Ch03-1-Functions-Built-in.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
     }
    ],
    "source": [
-    "print('hi', 'hello', 1, 2, 3, sep='$', end='', flush=True)\n",
+    "print('hi', 'hello', 1, 2, 3, sep='$', end='', flush=False)\n",
     "print('next line?')"
    ]
   },
