--- a/notebooks/Ch03-3-Functions-UserDefined.ipynb
+++ b/notebooks/Ch03-3-Functions-UserDefined.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -94,12 +94,13 @@
     "# Function definition\n",
     "# function prints the result but doesn't explictly return anything\n",
     "def greet():\n",
-    "    print('Hello World!')"
+    "    print('Hello World!')\n",
+    "    print('Goodbye cruel world!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +110,9 @@
      "output_type": "stream",
      "text": [
       "Hello World!\n",
-      "Hello World!\n"
+      "Goodbye cruel world!\n",
+      "Hello World!\n",
+      "Goodbye cruel world!\n"
      ]
     }
    ],
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -131,6 +134,7 @@
      "output_type": "stream",
      "text": [
       "Hello World!\n",
+      "Goodbye cruel world!\n",
       "a = None\n"
      ]
     }
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -154,7 +158,7 @@
        "function"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -176,7 +180,7 @@
        "function"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -198,7 +202,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World!\n"
+      "Hello World!\n",
+      "Goodbye cruel world!\n"
      ]
     }
    ],
