--- a/notebooks/Ch03-4-UnittestingFunctions.ipynb
+++ b/notebooks/Ch03-4-UnittestingFunctions.ipynb
@@ -66,21 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Examples of assert statments\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# == comparison operator that lets you compare two values\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# More on comparison operators in later chapter\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Examples of assert statments\n",
     "# == comparison operator that lets you compare two values\n",
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,10 +114,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def add(n1, n2):\n",
+    "    return n1+n2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Auto testing or asserting add function\n",
     "assert add(2, 3) == 5\n",
     "assert add(10, -5) == 5\n",
-    "# assert add(100, 2000.99) == ?"
+    "assert add(100, 2000.99) == 2100.99\n",
+    "assert add(\"Corin\",\"Chepko\") == \"CorinChepko\""
    ]
   },
   {
@@ -362,17 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x1, y1, x2, y2):\n",
-    "    pass"
+    "    m = (y2-y1)/(x2-x1)\n",
+    "    return m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,31 +390,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all test cases passed for slope()\n"
+     ]
+    }
+   ],
    "source": [
     "test_slope()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def intercept(x1, y1, x2, y2):\n",
-    "    pass"
+    "    b = y1 - slope(x1, y1, x2, y2)*x1\n",
+    "    return b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_intercept():\n",
-    "    assert intercept(1, 6, 3, 12) == 3.0\n",
+    "    ans =  intercept(1, 6, 3, 12)\n",
+    "    assert intercept(1, 6, 3, 12) == 3.0, f\"Expected 3.0, Received: {ans}\" \n",
     "    assert intercept(6, 1, 1, 6) == 7.0\n",
     "    assert intercept(4, 6, 12, 8) == 5.0\n",
     "    print('all test cases passed for intercept()')"
@@ -418,9 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all test cases passed for intercept()\n"
+     ]
+    }
+   ],
    "source": [
     "test_intercept()"
    ]
