--- a/notebooks/Ch04-Conditionals.ipynb
+++ b/notebooks/Ch04-Conditionals.ipynb
@@ -41,31 +41,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Examples of various comparison operators\n",
     "x = 10\n",
-    "y = 10"
+    "y = 11"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
     "# Is x equal to y? True or False?\n",
-    "print(x != y)"
+    "print(x == y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (1519575180.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[14], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    if( x = y ):\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "if( x = y ):\n",
+    "    condition = (x == y)\n",
+    "    print(f\"{x} == {y} = {condition}\")"
    ]
   },
   {
@@ -209,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +518,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "How much money have you saved?  100\n",
+      "How much money have you saved?  9_000_000\n",
       "Do you have a farrari? [y/yes | n/no]:  n\n"
      ]
     },
@@ -506,7 +526,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry, keep working!!\n"
+      "Congrats!! You can retire now.\n"
      ]
     }
    ],
@@ -515,7 +535,7 @@
     "# a retimerment calculator\n",
     "money = int(input('How much money have you saved? '))\n",
     "ferrari = input('Do you have a farrari? [y/yes | n/no]: ')\n",
-    "if money >= 1000000 or ferrari == 'y' or ferrari == 'yes':\n",
+    "if money >= 1_000_000 or ferrari == 'y' or ferrari == 'yes':\n",
     "    print('Congrats!! You can retire now.')\n",
     "else:\n",
     "    print('Sorry, keep working!!')"
