--- a/notebooks/Ch03-5-NamespaceModulesRefactoring.ipynb
+++ b/notebooks/Ch03-5-NamespaceModulesRefactoring.ipynb
@@ -467,36 +467,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name = 'Alice'\n",
+      "name = 'Jhon'\n",
       "a=1 and b='Apple'\n",
       "Hello John\n",
-      "Alice\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'name1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m someFunc(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mApple\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(name) \u001b[38;5;66;03m# Access global variable name\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mname1\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'name1' is not defined"
+      "Jhon\n",
+      "Xander\n"
      ]
     }
    ],
    "source": [
     "# Global and local scope demo\n",
     "name = \"Alice\" # global variable\n",
-    "\n",
+    "name1 = \"Xander\"\n",
     "def someFunc(a, b):\n",
+    "    global name\n",
+    "    name = \"Jhon\"\n",
     "    print(f'{name = }') # Access global variable, name\n",
     "    name1 = \"John\" # Declare local variable\n",
     "    print(f'{a=} and {b=}') # a and b are local variables\n",
@@ -816,9 +808,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
