--- a/notebooks/Ch05-Iterations.ipynb
+++ b/notebooks/Ch05-Iterations.ipynb
@@ -162,6 +162,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -184,18 +201,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(1, 11))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# let's provide a step of 2\n",
     "list(range(1, 11, 2))"
@@ -203,13 +242,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 hello world\n",
+      "2 hello world\n",
+      "4 hello world\n",
+      "6 hello world\n",
+      "8 hello world\n"
+     ]
+    }
+   ],
    "source": [
     "# print hello world some number of times!\n",
-    "for i in range(1, 11):\n",
+    "for i in range(0, 10, 2):\n",
     "    print(i, 'hello world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 hello world\n",
+      "9 hello world\n",
+      "8 hello world\n",
+      "7 hello world\n",
+      "6 hello world\n",
+      "5 hello world\n",
+      "4 hello world\n",
+      "3 hello world\n",
+      "2 hello world\n",
+      "1 hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10, 0, -1):\n",
+    "    print(f\"{i} hello world\")"
    ]
   },
   {
@@ -221,9 +299,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "for num in range(20):\n",
     "    print(num)\n",
@@ -410,13 +516,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1 Hello World\n",
+      "2 Hello World\n",
+      "3 Hello World\n",
+      "4 Hello World\n",
+      "5 Hello World\n",
       "1 Hello World\n",
       "2 Hello World\n",
       "3 Hello World\n",
@@ -429,7 +540,10 @@
     "i = 1\n",
     "while i <= 5:\n",
     "    print(i, 'Hello World')\n",
-    "    i += 1"
+    "    i += 1\n",
+    "# same as\n",
+    "for i in range(1, 6):\n",
+    "    print(i, 'Hello World')"
    ]
   },
   {
@@ -454,9 +568,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a whole number:  3/25\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a valid number!\n"
+     ]
+    },
     {
      "name": "stdin",
      "output_type": "stream",
@@ -475,7 +603,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a whole number:  1\n"
+      "Enter a whole number:  314\n"
      ]
     }
    ],
