--- a/notebooks/Ch05-Iterations.ipynb
+++ b/notebooks/Ch05-Iterations.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -420,13 +420,17 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1\n"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "end!\n"
      ]
     }
    ],
    "source": [
     "for i in range(5):\n",
-    "    if i == 2:\n",
+    "    if i == 6:\n",
     "        break\n",
     "    print(i)\n",
     "else:\n",
@@ -630,7 +634,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### countdown\n",
     "- run countdown as a script\n",
@@ -696,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -705,12 +711,31 @@
      "text": [
       "Hello\n"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 22222222222222222222222222222222222\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Look loop did encounter break\n"
+     ]
     }
    ],
    "source": [
-    "while True:\n",
+    "again = 0\n",
+    "while again < 1_000_000_000:\n",
     "    print('Hello')\n",
-    "    break\n",
+    "    if(again > 10):\n",
+    "        break\n",
+    "        \n",
+    "    again = int(input())\n",
+    "    again += 1\n",
     "else:\n",
     "    print(\"Look loop did encounter break\")"
    ]
