--- a/notebooks/Ch05-Iterations.ipynb
+++ b/notebooks/Ch05-Iterations.ipynb
@@ -61,100 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class range in module builtins:\n",
-      "\n",
-      "class range(object)\n",
-      " |  range(stop) -> range object\n",
-      " |  range(start, stop[, step]) -> range object\n",
-      " |  \n",
-      " |  Return an object that produces a sequence of integers from start (inclusive)\n",
-      " |  to stop (exclusive) by step.  range(i, j) produces i, i+1, i+2, ..., j-1.\n",
-      " |  start defaults to 0, and stop is omitted!  range(4) produces 0, 1, 2, 3.\n",
-      " |  These are exactly the valid indices for a list of 4 elements.\n",
-      " |  When step is given, it specifies the increment (or decrement).\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __bool__(self, /)\n",
-      " |      True if self else False\n",
-      " |  \n",
-      " |  __contains__(self, key, /)\n",
-      " |      Return key in self.\n",
-      " |  \n",
-      " |  __eq__(self, value, /)\n",
-      " |      Return self==value.\n",
-      " |  \n",
-      " |  __ge__(self, value, /)\n",
-      " |      Return self>=value.\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __getitem__(self, key, /)\n",
-      " |      Return self[key].\n",
-      " |  \n",
-      " |  __gt__(self, value, /)\n",
-      " |      Return self>value.\n",
-      " |  \n",
-      " |  __hash__(self, /)\n",
-      " |      Return hash(self).\n",
-      " |  \n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
-      " |  \n",
-      " |  __le__(self, value, /)\n",
-      " |      Return self<=value.\n",
-      " |  \n",
-      " |  __len__(self, /)\n",
-      " |      Return len(self).\n",
-      " |  \n",
-      " |  __lt__(self, value, /)\n",
-      " |      Return self<value.\n",
-      " |  \n",
-      " |  __ne__(self, value, /)\n",
-      " |      Return self!=value.\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Helper for pickle.\n",
-      " |  \n",
-      " |  __repr__(self, /)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  __reversed__(...)\n",
-      " |      Return a reverse iterator.\n",
-      " |  \n",
-      " |  count(...)\n",
-      " |      rangeobject.count(value) -> integer -- return number of occurrences of value\n",
-      " |  \n",
-      " |  index(...)\n",
-      " |      rangeobject.index(value) -> integer -- return index of value.\n",
-      " |      Raise ValueError if the value is not present.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  start\n",
-      " |  \n",
-      " |  step\n",
-      " |  \n",
-      " |  stop\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's learn about range()\n",
     "help(range)"
@@ -162,37 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "range(0, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(range(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert range into list of values\n",
     "# learn about list in later chapter\n",
@@ -201,40 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(range(1, 11))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 5, 7, 9]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's provide a step of 2\n",
     "list(range(1, 11, 2))"
@@ -242,21 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 hello world\n",
-      "2 hello world\n",
-      "4 hello world\n",
-      "6 hello world\n",
-      "8 hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print hello world some number of times!\n",
     "for i in range(0, 10, 2):\n",
@@ -265,26 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 hello world\n",
-      "9 hello world\n",
-      "8 hello world\n",
-      "7 hello world\n",
-      "6 hello world\n",
-      "5 hello world\n",
-      "4 hello world\n",
-      "3 hello world\n",
-      "2 hello world\n",
-      "1 hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(10, 0, -1):\n",
     "    print(f\"{i} hello world\")"
@@ -299,37 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(20):\n",
     "    print(num)\n",
@@ -348,21 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for loop example - continue\n",
     "for i in range(1, 11): # range ... 1...10\n",
@@ -412,22 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "end!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(5):\n",
     "    if i == 6:\n",
@@ -439,21 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "3\n",
-      "4\n",
-      "end!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(5):\n",
     "    if i == 2:\n",
@@ -465,17 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97 is prime\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for... else example\n",
     "# write a program to test whether a given number is prime\n",
@@ -520,26 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Hello World\n",
-      "2 Hello World\n",
-      "3 Hello World\n",
-      "4 Hello World\n",
-      "5 Hello World\n",
-      "1 Hello World\n",
-      "2 Hello World\n",
-      "3 Hello World\n",
-      "4 Hello World\n",
-      "5 Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 1\n",
     "while i <= 5:\n",
@@ -572,45 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a whole number:  3/25\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not a valid number!\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a whole number:  3.14\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not a valid number!\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a whole number:  314\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# not sure when the user will get this correct...\n",
     "# at least 1 try; could be more!!\n",
@@ -648,27 +361,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "9\n",
-      "8\n",
-      "7\n",
-      "6\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "Hapy new year!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# while loop - countdown\n",
     "import time\n",
@@ -702,31 +397,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 22222222222222222222222222222222222\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Look loop did encounter break\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "again = 0\n",
     "while again < 1_000_000_000:\n",
@@ -742,21 +415,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "Look loop didn't encounter break\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "count = 1\n",
     "while count < 5:\n",
@@ -778,11 +439,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "n = 1234\n",
+    "n = 123498236597256\n",
     "print(len(str(n)))"
    ]
   },
@@ -795,21 +464,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def countDigits(number):\n",
+    "def countDigits(number: int):\n",
     "    \"\"\"\n",
     "    given a positive number the function return number of digits\n",
     "    in the number\n",
     "    \"\"\"\n",
-    "    pass"
+    "    return len(str(number))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
