--- a/notebooks/Ch09-1-Dictionaries.ipynb
+++ b/notebooks/Ch09-1-Dictionaries.ipynb
@@ -1056,7 +1056,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def getHist(word):# = \"Mississippi\"\n",
