--- a/notebooks/Ch01-Introduction.ipynb
+++ b/notebooks/Ch01-Introduction.ipynb
@@ -89,7 +89,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Learning and Writing Python Code\n",
     "- one must write code to learn it\n",
